@@ -1,3 +1,8 @@
+2011-07-29  Valentin Hilbig  <tino@zoo.03.softkill.net>
+
+	* ex.h (tino_vpexit): fixing a tail recoursion (endless loop) on
+	certain errors.
+
 2011-05-08  Valentin Hilbig  <tino@firebird.03.softkill.net>
 
 	* slist.h (tino_glist_clear, tino_slist_clear): added
